fix: bug of the scrollbars in the page of menu

--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -56,4 +56,7 @@
 
 .main-content {
     flex-grow: 1;
+    max-height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
